# FastAPI_external_api

./: .flake8  README.md  docker-compose.yml  docker-entrypoint.sh  init_user.py  pyproject.toml  requirements.txt
app/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py
app/api/: router.py
app/api/endpoints/: health.py  usuarios.py
app/services/: database_service.py  email_service.py  external_api_service.py
tests/: conftest.py  test_database_service.py  test_endpoints.py  test_external_api_service.py
